# cape-cod-db

./: .env  .gitignore  .mise.toml  .tool-versions  .typos.toml  CHANGELOG.md  README.md  alembic.ini  app.py  capedb.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: cape.yml
alembic/: env.py
alembic/versions/: 6001985fea71_add_email_to_user_table.py
cape_cod_db/: alembic.ini  database.py  models.py
cape_cod_db/alembic/: __init__.py  env.py
cape_cod_db/alembic/versions/: eecb735a6c3b_create_user_table.py
cape_cod_db/cli/: app.py
cape_cod_db/migrations/: env.py
