[tool.poetry]
name = "cape-cod-db"
version = "0.1.0"
description = "SQLModel definition of the CAPE environment database."
authors = ["L. Drew Pihera <drew.pihera@gtri.gatech.edu>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "cape_cod_db" }]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.11"
sqlmodel = "^0.0.37"

[tool.poetry.scripts]
capedb = "cape_cod_db.cli.capedb:main"
capedb-app = "cape_cod_db.cli.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force-exclude = "cape_cod_db/migrations"
line-length = 80

[tool.isort]
profile = "black"
extend_skip = ["cape_cod_db/migrations"]

line_length = 80

[tool.ruff]
line-length = 80
